[package]
name = "storage"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
log = "0.4"
#wasmcloud-interface-factorial = "0.4"
embe-interface-storage = { path = "../storage-interface/rust" }
wasmbus-rpc = "0.8.2"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.3.1"
tokio = { version = "1.0", features = [ "full" ] }

[[bin]]
name = "storage"
path = "src/main.rs"
